src/objects/Product_Lot_Numbers__c.object
<CustomObject>
    <description>This is a Non Conformance - Product - Lot Number object.</description>
    <fields>
        <fullName>Customer_Supplier__c</fullName>
        <formula>IF(ISNULL(NC_Product__r.Non_Conformance__r.Customer__r.Id ) , NC_Product__r.Non_Conformance__r.Manufacturer_Supplier__r.Id  , NC_Product__r.Non_Conformance__r.Customer__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer/Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Codes__c</fullName>
        <label>Defect Codes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Count__c</fullName>
        <label>Defect Count</label>
        <summaryForeignKey>NC_Product_Defect__c.Product_Lot_Numbers__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lot_Bacth_Number__c</fullName>
        <label>Lot / Batch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Quantity_Affected__c</fullName>
        <label>Lot Quantity Affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_Created_Date__c</fullName>
        <formula>NC_Product__r.Non_Conformance__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NC_Number__c</fullName>
        <formula>NC_Product__r.Non_Conformance__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Product__c</fullName>
        <label>NC Product</label>
        <referenceTo>NC_Product__c</referenceTo>
        <relationshipName>Product_Lot_Numbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <formula>NC_Product__r.Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NC Product Lot Numbers</label>
    <nameField>
        <displayFormat>NCPLN-{00000}</displayFormat>
        <label>Lot / Bacth Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Product Lot Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lot_Quantity_affected_is_required</fullName>
        <active>false</active>
        <description>Lot_Quantity_affected_is_required</description>
        <errorConditionFormula>ISBLANK(Lot_Quantity_Affected__c)</errorConditionFormula>
        <errorDisplayField>Lot_Quantity_Affected__c</errorDisplayField>
        <errorMessage>Lot Quantity Affected is required.</errorMessage>
    </validationRules>
</CustomObject>